// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionsAndDiagnoses Snapshot Tests duplicate diagnosis search should matches snapshot 1`] = `
<div>
  <div
    class="cds--tile conditionsAndDiagnosesTile"
    data-testid="conditions-and-diagnoses-tile"
  >
    <div
      class="conditionsAndDiagnosesTitle"
      data-testid="conditions-and-diagnoses-title"
    >
      Conditions and Diagnoses
    </div>
    <div
      class="cds--list-box__wrapper"
    >
      <div
        class="cds--combo-box cds--autoalign cds--list-box cds--list-box--md"
      >
        <div
          class="cds--list-box__field"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-_r_8j_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Search for diagnoses"
            autocomplete="off"
            class="cds--text-input cds--text-input--empty"
            data-testid="diagnoses-search-combobox"
            id="diagnoses-search"
            placeholder="Search to add new diagnosis"
            role="combobox"
            tabindex="0"
            title=""
            type="text"
            value=""
          />
          <button
            aria-controls="downshift-_r_8j_-menu"
            aria-expanded="false"
            aria-label="Open"
            class="cds--list-box__menu-icon"
            id="downshift-_r_8j_-toggle-button"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="downshift-_r_8j_-label"
          class="cds--list-box__menu"
          id="downshift-_r_8j_-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        />
      </div>
    </div>
    <div
      aria-label="Added Diagnoses"
      class="_box_1jr6a_1 conditionsAndDiagnosesBox cds--css-grid cds--css-grid--narrow cds--css-grid--full-width"
      data-testid="box-w-title"
      role="region"
    >
      <div
        class="_header_1jr6a_8 cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        Added Diagnoses
      </div>
      <div
        class="cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        <div
          class="_grid_1dyfm_1 selectedDiagnosisItem cds--subgrid cds--subgrid--narrow"
          data-testid="selected-item"
        >
          <div
            class="_children_1dyfm_10 cds--sm:col-span-3 cds--md:col-span-7 cds--lg:col-span-15 cds--xlg:col-span-15 cds--css-grid-column"
          >
            <div
              class="cds--subgrid cds--subgrid--wide"
              data-testid="selected-diagnosis-item-grid"
            >
              <div
                class="selectedDiagnosisTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
              >
                <span
                  data-testid="diagnosis-display-name-uuid-1"
                >
                  Hypertension
                </span>
                <a
                  aria-disabled="false"
                  class="cds--link addAsConditionLink"
                  data-testid="add-as-condition-link"
                  href="#"
                >
                  Add as condition
                </a>
              </div>
              <div
                class="selectedDiagnosisCertainty cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
              >
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper"
                  data-testid="diagnoses-certainty-dropdown-uuid-1"
                >
                  <div
                    class="cds--dropdown cds--autoalign cds--list-box"
                    id="diagnoses-certainty-dropdown-uuid-1"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-_r_8l_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Diagnoses Certainty"
                      class="cds--list-box__field"
                      id="downshift-_r_8l_-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="Confirmed"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        Confirmed
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-_r_8l_-label"
                      class="cds--list-box__menu"
                      id="downshift-_r_8l_-menu"
                      role="listbox"
                      style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="_close_1dyfm_17 cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--xlg:col-span-1 cds--css-grid-column"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close Selected Item"
                  aria-labelledby="tooltip-_r_8n_"
                  class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--primary cds--btn--icon-only"
                  data-testid="selected-item-close-button"
                  id="close-selected-item"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_8n_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Selected Item Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConditionsAndDiagnoses Snapshot Tests empty form matches snapshot 1`] = `
<div>
  <div
    class="cds--tile conditionsAndDiagnosesTile"
    data-testid="conditions-and-diagnoses-tile"
  >
    <div
      class="conditionsAndDiagnosesTitle"
      data-testid="conditions-and-diagnoses-title"
    >
      Conditions and Diagnoses
    </div>
    <div
      class="cds--list-box__wrapper"
    >
      <div
        class="cds--combo-box cds--autoalign cds--list-box cds--list-box--md"
      >
        <div
          class="cds--list-box__field"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-_r_84_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Search for diagnoses"
            autocomplete="off"
            class="cds--text-input cds--text-input--empty"
            data-testid="diagnoses-search-combobox"
            id="diagnoses-search"
            placeholder="Search to add new diagnosis"
            role="combobox"
            tabindex="0"
            title=""
            type="text"
            value=""
          />
          <button
            aria-controls="downshift-_r_84_-menu"
            aria-expanded="false"
            aria-label="Open"
            class="cds--list-box__menu-icon"
            id="downshift-_r_84_-toggle-button"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="downshift-_r_84_-label"
          class="cds--list-box__menu"
          id="downshift-_r_84_-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ConditionsAndDiagnoses Snapshot Tests form with both diagnoses and conditions matches snapshot 1`] = `
<div>
  <div
    class="cds--tile conditionsAndDiagnosesTile"
    data-testid="conditions-and-diagnoses-tile"
  >
    <div
      class="conditionsAndDiagnosesTitle"
      data-testid="conditions-and-diagnoses-title"
    >
      Conditions and Diagnoses
    </div>
    <div
      class="cds--list-box__wrapper"
    >
      <div
        class="cds--combo-box cds--autoalign cds--list-box cds--list-box--md"
      >
        <div
          class="cds--list-box__field"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-_r_9b_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Search for diagnoses"
            autocomplete="off"
            class="cds--text-input cds--text-input--empty"
            data-testid="diagnoses-search-combobox"
            id="diagnoses-search"
            placeholder="Search to add new diagnosis"
            role="combobox"
            tabindex="0"
            title=""
            type="text"
            value=""
          />
          <button
            aria-controls="downshift-_r_9b_-menu"
            aria-expanded="false"
            aria-label="Open"
            class="cds--list-box__menu-icon"
            id="downshift-_r_9b_-toggle-button"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="downshift-_r_9b_-label"
          class="cds--list-box__menu"
          id="downshift-_r_9b_-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        />
      </div>
    </div>
    <div
      aria-label="Added Diagnoses"
      class="_box_1jr6a_1 conditionsAndDiagnosesBox cds--css-grid cds--css-grid--narrow cds--css-grid--full-width"
      data-testid="box-w-title"
      role="region"
    >
      <div
        class="_header_1jr6a_8 cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        Added Diagnoses
      </div>
      <div
        class="cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        <div
          class="_grid_1dyfm_1 selectedDiagnosisItem cds--subgrid cds--subgrid--narrow"
          data-testid="selected-item"
        >
          <div
            class="_children_1dyfm_10 cds--sm:col-span-3 cds--md:col-span-7 cds--lg:col-span-15 cds--xlg:col-span-15 cds--css-grid-column"
          >
            <div
              class="cds--subgrid cds--subgrid--wide"
              data-testid="selected-diagnosis-item-grid"
            >
              <div
                class="selectedDiagnosisTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
              >
                <span
                  data-testid="diagnosis-display-name-uuid-1"
                >
                  Hypertension
                </span>
                <a
                  aria-disabled="false"
                  class="cds--link addAsConditionLink"
                  data-testid="add-as-condition-link"
                  href="#"
                >
                  Add as condition
                </a>
              </div>
              <div
                class="selectedDiagnosisCertainty cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
              >
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper"
                  data-testid="diagnoses-certainty-dropdown-uuid-1"
                >
                  <div
                    class="cds--dropdown cds--autoalign cds--list-box"
                    id="diagnoses-certainty-dropdown-uuid-1"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-_r_9d_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Diagnoses Certainty"
                      class="cds--list-box__field"
                      id="downshift-_r_9d_-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="Confirmed"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        Confirmed
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-_r_9d_-label"
                      class="cds--list-box__menu"
                      id="downshift-_r_9d_-menu"
                      role="listbox"
                      style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="_close_1dyfm_17 cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--xlg:col-span-1 cds--css-grid-column"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close Selected Item"
                  aria-labelledby="tooltip-_r_9f_"
                  class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--primary cds--btn--icon-only"
                  data-testid="selected-item-close-button"
                  id="close-selected-item"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_9f_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Selected Item Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Added Conditions"
      class="_box_1jr6a_1 conditionsAndDiagnosesBox cds--css-grid cds--css-grid--narrow cds--css-grid--full-width"
      data-testid="box-w-title"
      role="region"
    >
      <div
        class="_header_1jr6a_8 cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        Added Conditions
      </div>
      <div
        class="cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        <div
          class="_grid_1dyfm_1 selectedConditionItem cds--subgrid cds--subgrid--narrow"
          data-testid="selected-item"
        >
          <div
            class="_children_1dyfm_10 cds--sm:col-span-3 cds--md:col-span-7 cds--lg:col-span-15 cds--xlg:col-span-15 cds--css-grid-column"
          >
            <div
              class="cds--subgrid cds--subgrid--wide"
            >
              <div
                class="selectedConditionTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-9 cds--xlg:col-span-9 cds--css-grid-column"
              >
                Chronic Hypertension
              </div>
              <div
                class="selectedConditionDuration cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-6 cds--xlg:col-span-6 cds--css-grid-column"
              >
                <div
                  class="cds--form-item selectedConditionDurationValue cds--text-input-wrapper"
                >
                  <div
                    class="cds--text-input__label-wrapper"
                  >
                    <label
                      class="cds--label cds--visually-hidden"
                      dir="auto"
                      for="condition-duration-value-uuid-3"
                    >
                      Duration
                    </label>
                  </div>
                  <div
                    class="cds--text-input__field-outer-wrapper"
                  >
                    <div
                      class="cds--text-input__field-wrapper"
                    >
                      <input
                        class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                        data-testid="condition-duration-value-uuid-3"
                        id="condition-duration-value-uuid-3"
                        placeholder="Enter duration"
                        title="Enter duration"
                        type="number"
                        value="6"
                      />
                      <span
                        aria-atomic="true"
                        aria-live="assertive"
                        class="cds--text-input__counter-alert"
                        role="alert"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper selectedConditionDurationUnit"
                >
                  <label
                    class="cds--label cds--visually-hidden"
                    for="downshift-_r_9j_-toggle-button"
                    id="downshift-_r_9j_-label"
                  >
                    Unit
                  </label>
                  <div
                    class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
                    id="condition-duration-unit-uuid-3"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-_r_9j_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-_r_9j_-label"
                      class="cds--list-box__field"
                      id="downshift-_r_9j_-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="Months"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        Months
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-_r_9j_-label"
                      class="cds--list-box__menu"
                      id="downshift-_r_9j_-menu"
                      role="listbox"
                      style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="_close_1dyfm_17 cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--xlg:col-span-1 cds--css-grid-column"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close Selected Item"
                  aria-labelledby="tooltip-_r_9l_"
                  class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--primary cds--btn--icon-only"
                  data-testid="selected-item-close-button"
                  id="close-selected-item"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_9l_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Selected Item Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="_grid_1dyfm_1 selectedConditionItem cds--subgrid cds--subgrid--narrow"
          data-testid="selected-item"
        >
          <div
            class="_children_1dyfm_10 cds--sm:col-span-3 cds--md:col-span-7 cds--lg:col-span-15 cds--xlg:col-span-15 cds--css-grid-column"
          >
            <div
              class="cds--subgrid cds--subgrid--wide"
            >
              <div
                class="selectedConditionTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-9 cds--xlg:col-span-9 cds--css-grid-column"
              >
                Type 2 Diabetes
              </div>
              <div
                class="selectedConditionDuration cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-6 cds--xlg:col-span-6 cds--css-grid-column"
              >
                <div
                  class="cds--form-item selectedConditionDurationValue cds--text-input-wrapper"
                >
                  <div
                    class="cds--text-input__label-wrapper"
                  >
                    <label
                      class="cds--label cds--visually-hidden"
                      dir="auto"
                      for="condition-duration-value-uuid-4"
                    >
                      Duration
                    </label>
                  </div>
                  <div
                    class="cds--text-input__field-outer-wrapper"
                  >
                    <div
                      class="cds--text-input__field-wrapper"
                    >
                      <input
                        class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                        data-testid="condition-duration-value-uuid-4"
                        id="condition-duration-value-uuid-4"
                        placeholder="Enter duration"
                        title="Enter duration"
                        type="number"
                        value=""
                      />
                      <span
                        aria-atomic="true"
                        aria-live="assertive"
                        class="cds--text-input__counter-alert"
                        role="alert"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper selectedConditionDurationUnit"
                >
                  <label
                    class="cds--label cds--visually-hidden"
                    for="downshift-_r_9p_-toggle-button"
                    id="downshift-_r_9p_-label"
                  >
                    Unit
                  </label>
                  <div
                    class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
                    id="condition-duration-unit-uuid-4"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-_r_9p_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-_r_9p_-label"
                      class="cds--list-box__field"
                      id="downshift-_r_9p_-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="Unit"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        Unit
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-_r_9p_-label"
                      class="cds--list-box__menu"
                      id="downshift-_r_9p_-menu"
                      role="listbox"
                      style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="_close_1dyfm_17 cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--xlg:col-span-1 cds--css-grid-column"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close Selected Item"
                  aria-labelledby="tooltip-_r_9r_"
                  class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--primary cds--btn--icon-only"
                  data-testid="selected-item-close-button"
                  id="close-selected-item"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_9r_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Selected Item Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConditionsAndDiagnoses Snapshot Tests form with search results matches snapshot 1`] = `
<div>
  <div
    class="cds--tile conditionsAndDiagnosesTile"
    data-testid="conditions-and-diagnoses-tile"
  >
    <div
      class="conditionsAndDiagnosesTitle"
      data-testid="conditions-and-diagnoses-title"
    >
      Conditions and Diagnoses
    </div>
    <div
      class="cds--list-box__wrapper"
    >
      <div
        class="cds--combo-box cds--autoalign cds--list-box cds--list-box--md"
      >
        <div
          class="cds--list-box__field"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-_r_87_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Search for diagnoses"
            autocomplete="off"
            class="cds--text-input cds--text-input--empty"
            data-testid="diagnoses-search-combobox"
            id="diagnoses-search"
            placeholder="Search to add new diagnosis"
            role="combobox"
            tabindex="0"
            title=""
            type="text"
            value=""
          />
          <button
            aria-controls="downshift-_r_87_-menu"
            aria-expanded="false"
            aria-label="Open"
            class="cds--list-box__menu-icon"
            id="downshift-_r_87_-toggle-button"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="downshift-_r_87_-label"
          class="cds--list-box__menu"
          id="downshift-_r_87_-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ConditionsAndDiagnoses Snapshot Tests form with selected conditions matches snapshot 1`] = `
<div>
  <div
    class="cds--tile conditionsAndDiagnosesTile"
    data-testid="conditions-and-diagnoses-tile"
  >
    <div
      class="conditionsAndDiagnosesTitle"
      data-testid="conditions-and-diagnoses-title"
    >
      Conditions and Diagnoses
    </div>
    <div
      class="cds--list-box__wrapper"
    >
      <div
        class="cds--combo-box cds--autoalign cds--list-box cds--list-box--md"
      >
        <div
          class="cds--list-box__field"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-_r_8s_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Search for diagnoses"
            autocomplete="off"
            class="cds--text-input cds--text-input--empty"
            data-testid="diagnoses-search-combobox"
            id="diagnoses-search"
            placeholder="Search to add new diagnosis"
            role="combobox"
            tabindex="0"
            title=""
            type="text"
            value=""
          />
          <button
            aria-controls="downshift-_r_8s_-menu"
            aria-expanded="false"
            aria-label="Open"
            class="cds--list-box__menu-icon"
            id="downshift-_r_8s_-toggle-button"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="downshift-_r_8s_-label"
          class="cds--list-box__menu"
          id="downshift-_r_8s_-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        />
      </div>
    </div>
    <div
      aria-label="Added Conditions"
      class="_box_1jr6a_1 conditionsAndDiagnosesBox cds--css-grid cds--css-grid--narrow cds--css-grid--full-width"
      data-testid="box-w-title"
      role="region"
    >
      <div
        class="_header_1jr6a_8 cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        Added Conditions
      </div>
      <div
        class="cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        <div
          class="_grid_1dyfm_1 selectedConditionItem cds--subgrid cds--subgrid--narrow"
          data-testid="selected-item"
        >
          <div
            class="_children_1dyfm_10 cds--sm:col-span-3 cds--md:col-span-7 cds--lg:col-span-15 cds--xlg:col-span-15 cds--css-grid-column"
          >
            <div
              class="cds--subgrid cds--subgrid--wide"
            >
              <div
                class="selectedConditionTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-9 cds--xlg:col-span-9 cds--css-grid-column"
              >
                Chronic Hypertension
              </div>
              <div
                class="selectedConditionDuration cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-6 cds--xlg:col-span-6 cds--css-grid-column"
              >
                <div
                  class="cds--form-item selectedConditionDurationValue cds--text-input-wrapper"
                >
                  <div
                    class="cds--text-input__label-wrapper"
                  >
                    <label
                      class="cds--label cds--visually-hidden"
                      dir="auto"
                      for="condition-duration-value-uuid-3"
                    >
                      Duration
                    </label>
                  </div>
                  <div
                    class="cds--text-input__field-outer-wrapper"
                  >
                    <div
                      class="cds--text-input__field-wrapper"
                    >
                      <input
                        class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                        data-testid="condition-duration-value-uuid-3"
                        id="condition-duration-value-uuid-3"
                        placeholder="Enter duration"
                        title="Enter duration"
                        type="number"
                        value="6"
                      />
                      <span
                        aria-atomic="true"
                        aria-live="assertive"
                        class="cds--text-input__counter-alert"
                        role="alert"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper selectedConditionDurationUnit"
                >
                  <label
                    class="cds--label cds--visually-hidden"
                    for="downshift-_r_8u_-toggle-button"
                    id="downshift-_r_8u_-label"
                  >
                    Unit
                  </label>
                  <div
                    class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
                    id="condition-duration-unit-uuid-3"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-_r_8u_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-_r_8u_-label"
                      class="cds--list-box__field"
                      id="downshift-_r_8u_-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="Months"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        Months
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-_r_8u_-label"
                      class="cds--list-box__menu"
                      id="downshift-_r_8u_-menu"
                      role="listbox"
                      style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="_close_1dyfm_17 cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--xlg:col-span-1 cds--css-grid-column"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close Selected Item"
                  aria-labelledby="tooltip-_r_90_"
                  class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--primary cds--btn--icon-only"
                  data-testid="selected-item-close-button"
                  id="close-selected-item"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_90_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Selected Item Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="_grid_1dyfm_1 selectedConditionItem cds--subgrid cds--subgrid--narrow"
          data-testid="selected-item"
        >
          <div
            class="_children_1dyfm_10 cds--sm:col-span-3 cds--md:col-span-7 cds--lg:col-span-15 cds--xlg:col-span-15 cds--css-grid-column"
          >
            <div
              class="cds--subgrid cds--subgrid--wide"
            >
              <div
                class="selectedConditionTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-9 cds--xlg:col-span-9 cds--css-grid-column"
              >
                Type 2 Diabetes
              </div>
              <div
                class="selectedConditionDuration cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-6 cds--xlg:col-span-6 cds--css-grid-column"
              >
                <div
                  class="cds--form-item selectedConditionDurationValue cds--text-input-wrapper"
                >
                  <div
                    class="cds--text-input__label-wrapper"
                  >
                    <label
                      class="cds--label cds--visually-hidden"
                      dir="auto"
                      for="condition-duration-value-uuid-4"
                    >
                      Duration
                    </label>
                  </div>
                  <div
                    class="cds--text-input__field-outer-wrapper"
                  >
                    <div
                      class="cds--text-input__field-wrapper"
                    >
                      <input
                        class="cds--text-input cds--text-input--sm cds--layout--size-sm"
                        data-testid="condition-duration-value-uuid-4"
                        id="condition-duration-value-uuid-4"
                        placeholder="Enter duration"
                        title="Enter duration"
                        type="number"
                        value=""
                      />
                      <span
                        aria-atomic="true"
                        aria-live="assertive"
                        class="cds--text-input__counter-alert"
                        role="alert"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper selectedConditionDurationUnit"
                >
                  <label
                    class="cds--label cds--visually-hidden"
                    for="downshift-_r_94_-toggle-button"
                    id="downshift-_r_94_-label"
                  >
                    Unit
                  </label>
                  <div
                    class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
                    id="condition-duration-unit-uuid-4"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-_r_94_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-_r_94_-label"
                      class="cds--list-box__field"
                      id="downshift-_r_94_-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="Unit"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        Unit
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-_r_94_-label"
                      class="cds--list-box__menu"
                      id="downshift-_r_94_-menu"
                      role="listbox"
                      style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="_close_1dyfm_17 cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--xlg:col-span-1 cds--css-grid-column"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close Selected Item"
                  aria-labelledby="tooltip-_r_96_"
                  class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--primary cds--btn--icon-only"
                  data-testid="selected-item-close-button"
                  id="close-selected-item"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_96_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Selected Item Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConditionsAndDiagnoses Snapshot Tests form with selected diagnoses matches snapshot 1`] = `
<div>
  <div
    class="cds--tile conditionsAndDiagnosesTile"
    data-testid="conditions-and-diagnoses-tile"
  >
    <div
      class="conditionsAndDiagnosesTitle"
      data-testid="conditions-and-diagnoses-title"
    >
      Conditions and Diagnoses
    </div>
    <div
      class="cds--list-box__wrapper"
    >
      <div
        class="cds--combo-box cds--autoalign cds--list-box cds--list-box--md"
      >
        <div
          class="cds--list-box__field"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-_r_8a_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Search for diagnoses"
            autocomplete="off"
            class="cds--text-input cds--text-input--empty"
            data-testid="diagnoses-search-combobox"
            id="diagnoses-search"
            placeholder="Search to add new diagnosis"
            role="combobox"
            tabindex="0"
            title=""
            type="text"
            value=""
          />
          <button
            aria-controls="downshift-_r_8a_-menu"
            aria-expanded="false"
            aria-label="Open"
            class="cds--list-box__menu-icon"
            id="downshift-_r_8a_-toggle-button"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="downshift-_r_8a_-label"
          class="cds--list-box__menu"
          id="downshift-_r_8a_-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        />
      </div>
    </div>
    <div
      aria-label="Added Diagnoses"
      class="_box_1jr6a_1 conditionsAndDiagnosesBox cds--css-grid cds--css-grid--narrow cds--css-grid--full-width"
      data-testid="box-w-title"
      role="region"
    >
      <div
        class="_header_1jr6a_8 cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        Added Diagnoses
      </div>
      <div
        class="cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        <div
          class="_grid_1dyfm_1 selectedDiagnosisItem cds--subgrid cds--subgrid--narrow"
          data-testid="selected-item"
        >
          <div
            class="_children_1dyfm_10 cds--sm:col-span-3 cds--md:col-span-7 cds--lg:col-span-15 cds--xlg:col-span-15 cds--css-grid-column"
          >
            <div
              class="cds--subgrid cds--subgrid--wide"
              data-testid="selected-diagnosis-item-grid"
            >
              <div
                class="selectedDiagnosisTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
              >
                <span
                  data-testid="diagnosis-display-name-uuid-1"
                >
                  Hypertension
                </span>
                <a
                  aria-disabled="false"
                  class="cds--link addAsConditionLink"
                  data-testid="add-as-condition-link"
                  href="#"
                >
                  Add as condition
                </a>
              </div>
              <div
                class="selectedDiagnosisCertainty cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
              >
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper"
                  data-testid="diagnoses-certainty-dropdown-uuid-1"
                >
                  <div
                    class="cds--dropdown cds--autoalign cds--list-box"
                    id="diagnoses-certainty-dropdown-uuid-1"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-_r_8c_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Diagnoses Certainty"
                      class="cds--list-box__field"
                      id="downshift-_r_8c_-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="Confirmed"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        Confirmed
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-_r_8c_-label"
                      class="cds--list-box__menu"
                      id="downshift-_r_8c_-menu"
                      role="listbox"
                      style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="_close_1dyfm_17 cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--xlg:col-span-1 cds--css-grid-column"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close Selected Item"
                  aria-labelledby="tooltip-_r_8e_"
                  class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--primary cds--btn--icon-only"
                  data-testid="selected-item-close-button"
                  id="close-selected-item"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_8e_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Selected Item Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
